# zulip-reader

./: README.md  pyproject (conflicted copy 2025-07-25 143105).toml  pyproject.toml
zulip_reader/: cli.py  main.py
