[project]
name = "zulip-reader"
version = "0.1.0"
description = ""
authors = [
    { name = "Daniel Kopecký", email = "kopecky.d@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow (>=1.3.0,<2.0.0)",
    "zulip (>=0.9.0,<0.10.0)"
]

[project.scripts]
zulip-reader = "zulip_reader.cli:main"

[tool.setuptools.packages.find]
where = ["zulip_reader"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
